@@ -1,3 +1,12 @@
+2025-01-21T00:35:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12877835442 # 541
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-21
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 721 1192 / 725 1196
+* notice: next accum: outdated-unq outdated-all / unq all: 722 1193 / 725 1196
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-01-06] / []
+
 2025-01-20T00:36:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12858677794 # 540
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-20
